apps/sonarr/overlays/nishir-tailnet/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr-proxy
  labels:
    app.kubernetes.io/name: sonarr-proxy
    app.kubernetes.io/component: proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: sonarr-proxy
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sonarr-proxy
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app.kubernetes.io/name: sonarr
              namespaces:
                - shikanime
              topologyKey: kubernetes.io/hostname
      containers:
        - name: caddy
          image: caddy
          ports:
            - containerPort: 443
              name: https
          volumeMounts:
            - name: caddy-config
              mountPath: /etc/caddy/Caddyfile
              subPath: Caddyfile
      volumes:
        - name: caddy-config
          secret:
            secretName: sonarr-proxy
            items:
              - key: Caddyfile
                path: Caddyfile
