apps/sonarr/overlays/nishir-tailnet/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  annotations:
    tailscale.com/tags: tag:web
spec:
  defaultBackend:
    service:
      name: sonarr
      port:
        name: https
  tls:
    - hosts:
        - sonarr
  ingressClassName: tailscale
